--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson02",
+  "name": "rhelius-rockets",
   "version": "1.0.0",
   "description": "",
   "main": "tailwind.config.js",
